<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close_details">Close details</string>

    <string name="action_share">Share</string>
    <string name="choose_share">Choose info to share</string>
    <string name="codec_list">Codec list</string>
    <string name="codec_details_selected">Selected codec details</string>
    <string name="codec_drm_all_info">All codecs and DRMs with details</string>

    <string name="feedback_email" translatable="false">parseus.dev@gmail.com</string>
    <string name="email_subject">Feedback</string>
    <string name="choose_email">Send feedback via…</string>
    <string name="no_email_apps">No apps can perform this action. Unable to copy the email address to the clipboard.</string>
    <string name="no_email_apps_bug">One of your installed apps is breaking the clipboard functionality for all others due to a bug in Android 4.3.\n\nPlease disable its clipboard monitoring feature (or uninstall/disable the app) and reboot the device to fix this problem.</string>
    <string name="no_email_apps_clipboard">No apps can perform this action. Email address was copied to the clipboard.</string>

    <string name="about_version_header">Version</string>
    <string name="about_version_content_description">Version: %s</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_license_notice_title">Notices for libraries:</string>
    <string name="about_github">Visit the app\'s GitHub page</string>
    <string name="about_changelog">What\'s new</string>
    <string name="about_support">Support</string>
    <string name="about_rate_app">Rate application</string>
    <string name="about_report_bugs">Report bugs</string>
    <string name="about_send_feedback">Send feedback</string>

    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_battery_saver">Set by Battery Saver</string>
    <string name="app_theme_system_default">System default</string>

    <string name="dynamic_theme_wallpaper_color_picker">Wallpaper Color Picker</string>
    <string name="dynamic_theme_color_picker_unavailable">Unavailable for the current wallpaper or your current settings.</string>

    <string name="more_info">Tap here to see more info…</string>

    <string name="details_fragment_tag" translatable="false">item_details</string>

    <string name="codec_row_content_description">%1$s codec %2$d - %3$s: %4$s for %5$s</string>
    <string name="codec_row_with_issue_content_description">%1$s codec %2$d - %3$s: %4$s for %5$s. Known issue detected!</string>
    <string name="drm_row_content_description">DRM %1$d: %2$s</string>
</resources>